@@ -1,3 +1,5 @@
+* Optimize Element.extend() by reducing the number of "for loops" in the method. [jddalton]
+
 * Implement a revision system in Element.extend() so that elements extended before a Element.addMethods() call will be re-extended when run through Element.extend() again. Closes #9812. [jddalton, vectoroc]
 
 * Add private helper method getOwnerDoc() and utilize element.ownerDocument to allow CSS queries and DOM dom traversal against iframes. Closes #11475. [jddalton]
